--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -46,7 +46,7 @@ endif
 # If enabled, this option makes the build process faster by not compiling
 # modules not used in the current configuration.
 ifeq ($(USE_SMART_BUILD),)
-  USE_SMART_BUILD = yes
+  USE_SMART_BUILD = no
 endif
 
 #
@@ -98,7 +98,7 @@ axoloti_release ?= ..
 axoloti_home ?= ..
 axoloti_firmware ?= ../firmware
 
-CHIBIOS = ${axoloti_release}/ChibiOS_16.1.7
+CHIBIOS = ${axoloti_release}/ChibiOS_16.1.8
 CHIBIOS_CONTRIB = $(CHIBIOS)/community
 
 
