--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -260,6 +260,7 @@ CSRC = $(STARTUPSRC) \
        ${FIRMWARE}/menu_content/food_menu.c \
        ${FIRMWARE}/menu_content/loadpatch_menu.c \
        ${FIRMWARE}/menu_content/main_menu.c \
+       ${FIRMWARE}/menu_content/midi_clock.c \
        ${FIRMWARE}/menu_content/midi_controller.c \
        ${FIRMWARE}/menu_content/midi_monitor.c \
        ${FIRMWARE}/menu_content/sdcard_menu.c \
