--- a/firmware/Makefile.patch
+++ b/firmware/Makefile.patch
@@ -20,7 +20,7 @@ axoloti_home ?= ..
 axoloti_firmware ?= ../firmware
 
 
-CHIBIOS = ${axoloti_release}/ChibiOS_16.1.8
+CHIBIOS = ${axoloti_release}/ChibiOS_18.2.0
 CHIBIOS_CONTRIB = $(CHIBIOS)/community
 CMSIS = ${axoloti_release}/CMSIS
 
@@ -40,18 +40,21 @@ $(info BDIR = ${BDIR})
 $(info FIRMWARE = ${FIRMWARE})
 
 include ${axoloti_firmware}/board.mk
-include $(CHIBIOS)/os/common/ports/ARMCMx/compilers/GCC/mk/startup_stm32f4xx.mk
+
+# Startup files.
+include $(CHIBIOS)/os/common/startup/ARMCMx/compilers/GCC/mk/startup_stm32f4xx.mk
 # HAL-OSAL files (optional).
 include $(CHIBIOS_CONTRIB)/os/hal/hal.mk
 include $(CHIBIOS_CONTRIB)/os/hal/ports/STM32/STM32F4xx/platform.mk
 include $(CHIBIOS)/os/hal/osal/rt/osal.mk
 # RTOS files (optional).
 include $(CHIBIOS)/os/rt/rt.mk
-include $(CHIBIOS)/os/rt/ports/ARMCMx/compilers/GCC/mk/port_v7m.mk	
+include $(CHIBIOS)/os/common/ports/ARMCMx/compilers/GCC/mk/port_v7m.mk
 include $(CHIBIOS)/os/various/fatfs_bindings/fatfs.mk
 
 
-INCDIR = ${CMSIS}/Include \
+INCDIR = $(CHIBIOS)/os/license \
+         ${CMSIS}/Include \
          ${CMSIS}/DSP_Lib/Include \
 		 $(STARTUPINC) $(KERNINC) $(PORTINC) $(OSALINC) \
          $(HALINC) $(PLATFORMINC) $(BOARDINC) $(TESTINC) \
