GUI: update Marlin

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -108,7 +108,7 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-run.jvmargs=-Xbootclasspath/a:lib/marlin-0.7.4.jar  -Xbootclasspath/p:lib/marlin-0.7.4-sun-java2d.jar -Dsun.java2d.renderer=org.marlin.pisces.PiscesRenderingEngine
+run.jvmargs=-Xbootclasspath/a:lib/marlin-0.9.1-Unsafe.jar -Dsun.java2d.renderer=org.marlin.pisces.PiscesRenderingEngine
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
