--- a/build.xml
+++ b/build.xml
@@ -116,8 +116,7 @@
       <zipfileset excludes="META-INF/*.SF" src="lib/usb4java-1.2.0/lib/libusb4java-1.2.0-windows-x86_64.jar"/>
       <zipfileset excludes="META-INF/*.SF" src="lib/piccolo2d-core-3.1.jar"/>
       <zipfileset excludes="META-INF/*.SF" src="lib/piccolo2d-extras-3.1.jar"/>
-      <zipfileset excludes="META-INF/*.SF" src="lib/marlin-0.8.2.jar"/>
-      <zipfileset excludes="META-INF/*.SF" src="lib/marlin-0.8.2-sun-java2d.jar"/>
+      <zipfileset excludes="META-INF/*.SF" src="lib/marlin-0.9.1-Unsafe.jar"/>
 
     </jar>
       <!-- include source files -->
@@ -275,8 +274,7 @@
              <include name="usb4java-1.2.0/lib/libusb4java-1.2.0-windows-x86_64.jar"/>
              <include name="piccolo2d-extras-3.1.jar"/>
              <include name="piccolo2d-core-3.1.jar"/>
-             <include name="marlin-0.8.2.jar"/>
-             <include name="marlin-0.8.2-sun-java2d.jar"/>
+             <include name="marlin-0.9.1-Unsafe.jar"/>
 		 </fx:fileset>
 		 <fx:fileset dir=".">
 			 <include name="doc/*"/>
@@ -338,8 +336,7 @@
 			<fx:application name="Axoloti" mainClass="axoloti.Axoloti" version="${short.version}"/>
 	    	<fx:resources refid="appRes"/>
                 <fx:platform>
-                    <fx:jvmarg value="-Xbootclasspath/a:marlin-0.8.2.jar"/>
-                    <fx:jvmarg value="-Xbootclasspath/p:marlin-0.8.2-sun-java2d.jar"/>
+                    <fx:jvmarg value="-Xbootclasspath/a:marlin-0.9.1-Unsafe.jar"/>
                     <fx:jvmarg value="-Dsun.java2d.renderer=org.marlin.pisces.MarlinRenderingEngine" />
                 </fx:platform>
     	</fx:deploy>
@@ -357,8 +354,7 @@
 			<fx:application name="Axoloti" mainClass="axoloti.Axoloti" version="${short.version}"/>
 	    	<fx:resources refid="appRes"/>
                 <fx:platform>
-                    <fx:jvmarg value="-Xbootclasspath/a:marlin-0.8.2.jar"/>
-                    <fx:jvmarg value="-Xbootclasspath/p:marlin-0.8.2-sun-java2d.jar"/>
+                    <fx:jvmarg value="-Xbootclasspath/a:marlin-0.9.1-Unsafe.jar"/>
                     <fx:jvmarg value="-Dsun.java2d.renderer=org.marlin.pisces.MarlinRenderingEngine" />
                 </fx:platform>
     	</fx:deploy>
@@ -385,8 +381,7 @@
 			<fx:application name="Axoloti" mainClass="axoloti.Axoloti" version="${short.version}"/>
 			<fx:resources refid="appRes"/>
 			<fx:platform>
-                <fx:jvmarg value="-Xbootclasspath/a:marlin-0.8.2.jar"/>
-                <fx:jvmarg value="-Xbootclasspath/p:marlin-0.8.2-sun-java2d.jar"/>
+                <fx:jvmarg value="-Xbootclasspath/a:marlin-0.9.1-Unsafe.jar"/>
                 <fx:jvmarg value="-Dsun.java2d.renderer=org.marlin.pisces.MarlinRenderingEngine" />
             </fx:platform>
     	</fx:deploy>
