--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
     case "${TRAVIS_OS_NAME:-linux}" in
     linux)
       sudo apt-get update -qq
-      sudo apt-get install -qq oracle-java8-installer
+      sudo apt-get install -qq oracle-java8-installer fakeroot
       jdk_switcher use oraclejdk8
       ./platform_linux/build.sh
       ;;
