--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,118 +1,93 @@
-annotation.processing.enabled=true
-annotation.processing.enabled.in.editor=false
-annotation.processing.processors.list=
-annotation.processing.run.all.processors=true
-annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-ant.customtasks.libs=JWSAntTasks
-application.title=Axoloti
-application.vendor=
-build.classes.dir=${build.dir}/classes
-build.classes.excludes=**/*.java,**/*.form
-# This directory is removed when the project is cleaned:
-build.dir=build
-build.generated.dir=${build.dir}/generated
-build.generated.sources.dir=${build.dir}/generated-sources
-# Only compile against the classpath explicitly listed here:
-build.sysclasspath=ignore
-build.test.classes.dir=${build.dir}/test/classes
-build.test.results.dir=${build.dir}/test/results
-# Uncomment to specify the preferred debugger connection transport:
-#debug.transport=dt_socket
-debug.classpath=\
-    ${run.classpath}
-debug.test.classpath=\
-    ${run.test.classpath}
-# This directory is removed when the project is cleaned:
-dist.dir=dist
-dist.jar=${dist.dir}/Axoloti.jar
-dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
-excludes=
-file.reference.jsch-0.1.53.jar=lib/jsch-0.1.53.jar
-file.reference.libusb4java-1.2.0-linux-arm.jar=lib\\usb4java-1.2.0\\lib\\libusb4java-1.2.0-linux-arm.jar
-file.reference.libusb4java-1.2.0-linux-x86.jar=lib\\usb4java-1.2.0\\lib\\libusb4java-1.2.0-linux-x86.jar
-file.reference.libusb4java-1.2.0-linux-x86_64.jar=lib\\usb4java-1.2.0\\lib\\libusb4java-1.2.0-linux-x86_64.jar
-file.reference.libusb4java-1.2.0-osx-x86.jar=lib\\usb4java-1.2.0\\lib\\libusb4java-1.2.0-osx-x86.jar
-file.reference.libusb4java-1.2.0-osx-x86_64.jar=lib\\usb4java-1.2.0\\lib\\libusb4java-1.2.0-osx-x86_64.jar
+#Mon Apr 30 11:54:43 CEST 2018
+jnlp.offline-allowed=false
+javadoc.splitindex=true
 file.reference.libusb4java-1.2.0-windows-x86.jar=lib\\usb4java-1.2.0\\lib\\libusb4java-1.2.0-windows-x86.jar
-file.reference.libusb4java-1.2.0-windows-x86_64.jar=lib\\usb4java-1.2.0\\lib\\libusb4java-1.2.0-windows-x86_64.jar
-file.reference.main-java=src/main/java
+build.classes.excludes=**/*.java,**/*.form
 file.reference.org.eclipse.jgit-4.2.0.jar=lib/org.eclipse.jgit-4.2.0.jar
-file.reference.piccolo2d-core-3.1.jar=lib/piccolo2d-core-3.1.jar
-file.reference.piccolo2d-extras-3.1.jar=lib/piccolo2d-extras-3.1.jar
-file.reference.rsyntaxtextarea-2.5.8.jar=lib\\rsyntaxtextarea-2.5.8.jar
-file.reference.simple-xml-2.7.1.jar=lib/simple-xml-2.7.1.jar
-file.reference.slf4j-api-1.7.13.jar=lib/slf4j-api-1.7.13.jar
-file.reference.slf4j-simple-1.7.13.jar=lib/slf4j-simple-1.7.13.jar
-file.reference.usb4java-1.2.0.jar=lib\\usb4java-1.2.0\\lib\\usb4java-1.2.0.jar
-includes=**
-jar.archive.disabled=${jnlp.enabled}
-jar.compress=false
-jar.index=${jnlp.enabled}
-javac.classpath=\
-    ${file.reference.simple-xml-2.7.1.jar}:\
-    ${file.reference.usb4java-1.2.0.jar}:\
-    ${file.reference.libusb4java-1.2.0-windows-x86_64.jar}:\
-    ${file.reference.libusb4java-1.2.0-windows-x86.jar}:\
-    ${file.reference.libusb4java-1.2.0-linux-arm.jar}:\
-    ${file.reference.libusb4java-1.2.0-linux-x86.jar}:\
-    ${file.reference.libusb4java-1.2.0-linux-x86_64.jar}:\
-    ${file.reference.libusb4java-1.2.0-osx-x86.jar}:\
-    ${file.reference.libusb4java-1.2.0-osx-x86_64.jar}:\
-    ${file.reference.rsyntaxtextarea-2.5.8.jar}:\
-    ${file.reference.org.eclipse.jgit-4.2.0.jar}:\
-    ${file.reference.slf4j-api-1.7.13.jar}:\
-    ${file.reference.slf4j-simple-1.7.13.jar}:\
-    ${file.reference.jsch-0.1.53.jar}:\
-    ${file.reference.piccolo2d-core-3.1.jar}:\
-    ${file.reference.piccolo2d-extras-3.1.jar}
-# Space-separated list of extra javac options
-javac.compilerargs=
-javac.deprecation=false
-javac.external.vm=false
-javac.processorpath=\
-    ${javac.classpath}
-javac.source=1.8
+javadoc.author=false
+build.sysclasspath=ignore
+file.reference.main-java=src/main/java
 javac.target=1.8
+build.generated.dir=${build.dir}/generated
+run.classpath=${javac.classpath}\:${build.classes.dir}
+file.reference.jsch-0.1.53.jar=lib/jsch-0.1.53.jar
+debug.test.classpath=${run.test.classpath}
+jnlp.descriptor=application
+build.dir=build
+javac.deprecation=false
+jnlp.signed=false
+test.src.dir=test\\unit\\src
+junit.selected.version=4
+jar.archive.disabled=${jnlp.enabled}
+includes=**
+application.vendor=
+file.reference.piccolo2d-extras-3.1.jar=lib/piccolo2d-extras-3.1.jar
+mkdist.disabled=false
+jar.compress=false
+jnlp.mixed.code=default
+ant.customtasks.libs=JWSAntTasks
+annotation.processing.processors.list=
+javac.external.vm=false
+javadoc.version=false
+file.reference.slf4j-simple-1.7.13.jar=lib/slf4j-simple-1.7.13.jar
+build.classes.dir=${build.dir}/classes
+file.reference.libusb4java-1.2.0-linux-x86_64.jar=lib\\usb4java-1.2.0\\lib\\libusb4java-1.2.0-linux-x86_64.jar
+dist.dir=dist
+manifest.file=manifest.mf
+javac.source=1.8
+run.jvmargs=-Xbootclasspath/a\:lib/marlin-0.9.1-Unsafe.jar -Dsun.java2d.renderer\=org.marlin.pisces.PiscesRenderingEngine
+file.reference.libusb4java-1.2.0-linux-arm.jar=lib\\usb4java-1.2.0\\lib\\libusb4java-1.2.0-linux-arm.jar
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsEnabled=true
+javac.test.processorpath=${javac.test.classpath}
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+build.generated.sources.dir=${build.dir}/generated-sources
+file.reference.rsyntaxtextarea-2.5.8.jar=lib\\rsyntaxtextarea-2.5.8.jar
+jnlp.signing=
+file.reference.libusb4java-1.2.0-osx-x86.jar=lib\\usb4java-1.2.0\\lib\\libusb4java-1.2.0-osx-x86.jar
+javadoc.notree=false
+dist.jar=${dist.dir}/Axoloti.jar
+file.reference.libusb4java-1.2.0-osx-x86_64.jar=lib\\usb4java-1.2.0\\lib\\libusb4java-1.2.0-osx-x86_64.jar
+platform.active=default_platform
+annotation.processing.enabled=true
+file.reference.piccolo2d-core-3.1.jar=lib/piccolo2d-core-3.1.jar
+jnlp.icon=/Users/edm/AxoStudio/logo/axoloti_icon.png
+main.class=axoloti.Axoloti
+dist.javadoc.dir=${dist.dir}/javadoc
+javadoc.additionalparam=
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
+javac.classpath=${file.reference.simple-xml-2.7.1.jar}\:${file.reference.usb4java-1.2.0.jar}\:${file.reference.libusb4java-1.2.0-windows-x86_64.jar}\:${file.reference.libusb4java-1.2.0-windows-x86.jar}\:${file.reference.libusb4java-1.2.0-linux-arm.jar}\:${file.reference.libusb4java-1.2.0-linux-x86.jar}\:${file.reference.libusb4java-1.2.0-linux-x86_64.jar}\:${file.reference.libusb4java-1.2.0-osx-x86.jar}\:${file.reference.libusb4java-1.2.0-osx-x86_64.jar}\:${file.reference.rsyntaxtextarea-2.5.8.jar}\:${file.reference.org.eclipse.jgit-4.2.0.jar}\:${file.reference.slf4j-api-1.7.13.jar}\:${file.reference.slf4j-simple-1.7.13.jar}\:${file.reference.jsch-0.1.53.jar}\:${file.reference.piccolo2d-core-3.1.jar}\:${file.reference.piccolo2d-extras-3.1.jar}
+javadoc.noindex=false
+annotation.processing.enabled.in.editor=false
+file.reference.libusb4java-1.2.0-windows-x86_64.jar=lib\\usb4java-1.2.0\\lib\\libusb4java-1.2.0-windows-x86_64.jar
+javadoc.private=false
+javadoc.encoding=${source.encoding}
+build.test.classes.dir=${build.dir}/test/classes
+file.reference.usb4java-1.2.0.jar=lib\\usb4java-1.2.0\\lib\\usb4java-1.2.0.jar
+jar.index=${jnlp.enabled}
+javac.compilerargs=
+source.encoding=UTF-8
+file.reference.libusb4java-1.2.0-linux-x86.jar=lib\\usb4java-1.2.0\\lib\\libusb4java-1.2.0-linux-x86.jar
+jnlp.signing.keystore=
+meta.inf.dir=${src.dir}/META-INF
+annotation.processing.run.all.processors=true
+excludes=
+application.title=Axoloti
+jnlp.codebase.type=no.codebase
+javac.processorpath=${javac.classpath}
+build.test.results.dir=${build.dir}/test/results
+endorsed.classpath=
+javadoc.use=true
+file.reference.slf4j-api-1.7.13.jar=lib/slf4j-api-1.7.13.jar
+javadoc.nonavbar=false
+jnlp.signing.alias=
+file.reference.simple-xml-2.7.1.jar=lib/simple-xml-2.7.1.jar
+javadoc.windowtitle=
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_4.classpath}
-javac.test.processorpath=\
-    ${javac.test.classpath}
-javadoc.additionalparam=
-javadoc.author=false
-javadoc.encoding=${source.encoding}
-javadoc.noindex=false
-javadoc.nonavbar=false
-javadoc.notree=false
-javadoc.private=false
-javadoc.splitindex=true
-javadoc.use=true
-javadoc.version=false
-javadoc.windowtitle=
-jnlp.codebase.type=no.codebase
-jnlp.descriptor=application
-jnlp.enabled=false
-jnlp.icon=/Users/edm/AxoStudio/logo/axoloti_icon.png
-jnlp.mixed.code=default
-jnlp.offline-allowed=false
-jnlp.signed=false
-jnlp.signing=
-jnlp.signing.alias=
-jnlp.signing.keystore=
-main.class=axoloti.Axoloti
-manifest.file=manifest.mf
-meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
-platform.active=default_platform
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
-run.jvmargs=-Xbootclasspath/a:lib/marlin-0.9.1-Unsafe.jar -Dsun.java2d.renderer=org.marlin.pisces.PiscesRenderingEngine
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-source.encoding=UTF-8
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 src.dir=${file.reference.main-java}
-test.src.dir=test\\unit\\src
+annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+debug.classpath=${run.classpath}
+jnlp.enabled=false
