--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,5 @@
+file.reference.hamcrest-core-1.3.jar=lib/hamcrest-core-1.3.jar
+file.reference.junit-4.12.jar=lib/junit-4.12.jar
 #Mon Apr 30 11:54:43 CEST 2018
 jnlp.offline-allowed=false
 javadoc.splitindex=true
@@ -9,7 +11,9 @@ build.sysclasspath=ignore
 file.reference.main-java=src/main/java
 javac.target=1.8
 build.generated.dir=${build.dir}/generated
-run.classpath=${javac.classpath}\:${build.classes.dir}
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
 file.reference.jsch-0.1.53.jar=lib/jsch-0.1.53.jar
 debug.test.classpath=${run.test.classpath}
 jnlp.descriptor=application
@@ -39,7 +43,9 @@ run.jvmargs=-Xbootclasspath/a\:lib/marlin-0.9.1-Unsafe.jar -Dsun.java2d.renderer
 file.reference.libusb4java-1.2.0-linux-arm.jar=lib\\usb4java-1.2.0\\lib\\libusb4java-1.2.0-linux-arm.jar
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsEnabled=true
 javac.test.processorpath=${javac.test.classpath}
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
 build.generated.sources.dir=${build.dir}/generated-sources
 file.reference.rsyntaxtextarea-2.5.8.jar=lib\\rsyntaxtextarea-2.5.8.jar
 jnlp.signing=
@@ -55,7 +61,23 @@ main.class=axoloti.Axoloti
 dist.javadoc.dir=${dist.dir}/javadoc
 javadoc.additionalparam=
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
-javac.classpath=${file.reference.simple-xml-2.7.1.jar}\:${file.reference.usb4java-1.2.0.jar}\:${file.reference.libusb4java-1.2.0-windows-x86_64.jar}\:${file.reference.libusb4java-1.2.0-windows-x86.jar}\:${file.reference.libusb4java-1.2.0-linux-arm.jar}\:${file.reference.libusb4java-1.2.0-linux-x86.jar}\:${file.reference.libusb4java-1.2.0-linux-x86_64.jar}\:${file.reference.libusb4java-1.2.0-osx-x86.jar}\:${file.reference.libusb4java-1.2.0-osx-x86_64.jar}\:${file.reference.rsyntaxtextarea-2.5.8.jar}\:${file.reference.org.eclipse.jgit-4.2.0.jar}\:${file.reference.slf4j-api-1.7.13.jar}\:${file.reference.slf4j-simple-1.7.13.jar}\:${file.reference.jsch-0.1.53.jar}\:${file.reference.piccolo2d-core-3.1.jar}\:${file.reference.piccolo2d-extras-3.1.jar}
+javac.classpath=\
+    ${file.reference.simple-xml-2.7.1.jar}:\
+    ${file.reference.usb4java-1.2.0.jar}:\
+    ${file.reference.libusb4java-1.2.0-windows-x86_64.jar}:\
+    ${file.reference.libusb4java-1.2.0-windows-x86.jar}:\
+    ${file.reference.libusb4java-1.2.0-linux-arm.jar}:\
+    ${file.reference.libusb4java-1.2.0-linux-x86.jar}:\
+    ${file.reference.libusb4java-1.2.0-linux-x86_64.jar}:\
+    ${file.reference.libusb4java-1.2.0-osx-x86.jar}:\
+    ${file.reference.libusb4java-1.2.0-osx-x86_64.jar}:\
+    ${file.reference.rsyntaxtextarea-2.5.8.jar}:\
+    ${file.reference.org.eclipse.jgit-4.2.0.jar}:\
+    ${file.reference.slf4j-api-1.7.13.jar}:\
+    ${file.reference.slf4j-simple-1.7.13.jar}:\
+    ${file.reference.jsch-0.1.53.jar}:\
+    ${file.reference.piccolo2d-core-3.1.jar}:\
+    ${file.reference.piccolo2d-extras-3.1.jar}
 javadoc.noindex=false
 annotation.processing.enabled.in.editor=false
 file.reference.libusb4java-1.2.0-windows-x86_64.jar=lib\\usb4java-1.2.0\\lib\\libusb4java-1.2.0-windows-x86_64.jar
@@ -73,7 +95,8 @@ annotation.processing.run.all.processors=true
 excludes=
 application.title=Axoloti
 jnlp.codebase.type=no.codebase
-javac.processorpath=${javac.classpath}
+javac.processorpath=\
+    ${javac.classpath}
 build.test.results.dir=${build.dir}/test/results
 endorsed.classpath=
 javadoc.use=true
@@ -86,7 +109,9 @@ javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+    ${libs.hamcrest.classpath}:\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.junit-4.12.jar}
 src.dir=${file.reference.main-java}
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 debug.classpath=${run.classpath}
