--- a/firmware/Makefile.patch
+++ b/firmware/Makefile.patch
@@ -19,9 +19,8 @@ axoloti_release ?= ..
 axoloti_home ?= ..
 axoloti_firmware ?= ../firmware
 
+include $(axoloti_firmware)/ch_version.mk
 
-CHIBIOS = ${axoloti_release}/ChibiOS_18.2.0
-CHIBIOS_CONTRIB = $(CHIBIOS)/community
 CMSIS = ${axoloti_release}/CMSIS
 
 SPACE := 
