FW: update to ChibiOS_18.2.1, gcc-arm-none-eabi-7-2018q2 (4)

--- a/firmware/flasher/Makefile
+++ b/firmware/flasher/Makefile
@@ -68,6 +68,7 @@ endif
 # Define project name here
 PROJECT = flasher
 BUILDDIR = flasher_build
+DEPDIR = BUILDDIR/.dep
 
 # Imported source files and paths
 include ../ch_version.mk
