FW: module makefile fix

--- a/firmware/Makefile.module
+++ b/firmware/Makefile.module
@@ -36,19 +36,21 @@ FIRMWARE=.
 $(info BDIR = ${BDIR})
 $(info FIRMWARE = ${FIRMWARE})
 
-include board.mk
-include $(CHIBIOS)/os/common/ports/ARMCMx/compilers/GCC/mk/startup_stm32f4xx.mk
+include ${axoloti_firmware}/board.mk
+
+include $(CHIBIOS)/os/common/startup/ARMCMx/compilers/GCC/mk/startup_stm32f4xx.mk
 # HAL-OSAL files (optional).
 include $(CHIBIOS_CONTRIB)/os/hal/hal.mk
 include $(CHIBIOS_CONTRIB)/os/hal/ports/STM32/STM32F4xx/platform.mk
 include $(CHIBIOS)/os/hal/osal/rt/osal.mk
 # RTOS files (optional).
 include $(CHIBIOS)/os/rt/rt.mk
-include $(CHIBIOS)/os/rt/ports/ARMCMx/compilers/GCC/mk/port_v7m.mk	
+include $(CHIBIOS)/os/common/ports/ARMCMx/compilers/GCC/mk/port_v7m.mk
 include $(CHIBIOS)/os/various/fatfs_bindings/fatfs.mk
 
 
-INCDIR = ${CMSIS}/Include \
+INCDIR = $(CHIBIOS)/os/license \
+         ${CMSIS}/Include \
          ${CMSIS}/DSP_Lib/Include \
 		 $(STARTUPINC) $(KERNINC) $(PORTINC) $(OSALINC) \
          $(HALINC) $(PLATFORMINC) $(BOARDINC) $(TESTINC) \
