--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,18 @@
 os:
   - linux
   - osx
+matrix:
+    include:
+      - os: osx
+        osx_image: xcode8.3
+        before_install:
+        - ./platform_osx/build.sh
+      - os: linux
+        - ./platform_linux/build.sh
+
 language: java
-osx_image: xcode8.2
 before_install:
-  - >
-    case "${TRAVIS_OS_NAME:-linux}" in
-    linux)
-      sudo apt-get update -qq
-      sudo apt-get install -qq oracle-java8-installer
-      jdk_switcher use oraclejdk8
-      ./platform_linux/build.sh
-      ;;
-    osx)
-      brew install ant p7zip
-      ./platform_osx/build.sh
-      ;;
-    esac;
-    javac -version;
+  - javac -version;
 
 script:
   - ant
