--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ matrix:
         before_install:
         - ./platform_osx/build.sh
       - os: linux
+        before_install:
         - ./platform_linux/build.sh
 
 language: java
