--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ matrix:
       - os: osx
         osx_image: xcode8.3
         before_install:
-        - brew install p7zip
+        - brew install ant p7zip
         - ./platform_osx/build.sh
       - os: linux
         sudo: required
