--- a/build.xml
+++ b/build.xml
@@ -125,7 +125,7 @@
       </fileset>
   </target>
 
-  <target name="-post-jar" depends="bundle, runtime">
+  <target name="-post-jar" depends="bundle">
   </target>
 
   <target name="userguide">
