--- a/platform_osx/.gitignore
+++ b/platform_osx/.gitignore
@@ -5,10 +5,10 @@ lib/
 share/
 src/dfu-util-0.8.tar.gz
 src/libusb-1.0.19.tar.bz2
-src/make-3.82.tar.gz
+src/make-*.tar.gz
 src/dfu-util-0.8
 src/libusb-1.0.19
-src/make-3.82
+src/make-*
 src/ChibiOS_*.zip
 src/ChibiOS_*.7z
 x86_64/
